# sodipodi

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  DEVNOTES  GNOME_Sodipodi.oaf.in  GNOME_Sodipodi.oafinfo  HACKING  MAINTAINERS  Makefile.am  NEWS  README  README.document  README.new-object-tree  README.notepad  README.plan  Sodipodi.dev  TODO  acconfig.h  acinclude.m4  autogen.sh  config.h.win32  configure.in  makefile.msc  sodipodi.desktop  sodipodi.desktop.in  sodipodi.doap  sodipodi.gnorba  sodipodi.oafinfo  sodipodi.prj  sodipodi.spec.in  sp-make.msc  tools-version.sh
extensions/: Makefile.am
glade/: Makefile.am  add.xpm  align.c  align.glade  back.xpm  curve.xpm  cusp.xpm  del.xpm  delete.xpm  desktop.c  desktop.glade  display.c  display.glade  div.xpm  document.c  document.glade  duplicate.xpm  ellipse.xpm  fill.xpm  font.xpm  forward.xpm  freehand.xpm  item.c  item.glade  join.xpm  line.xpm  node.xpm  object_props.c  object_props.glade  rect.xpm  select.xpm  selection_intersection.xpm  selection_subtraction.xpm  selection_union.xpm  smooth.xpm  sodipodi-glade.c  sodipodi.glade  stroke-dialog.glade  stroke.c  stroke.glade  (+15 more)
src/: .cvsignore  Makefile.am  api.h  arc-context.c  arc-context.h  attributes.c  attributes.h  color.c  color.h  desktop-affine.c  desktop-affine.h  desktop-events.c  desktop-events.h  desktop-handles.c  desktop-handles.h  desktop-snap.c  desktop-snap.h  desktop-ui.c  desktop-ui.h  desktop.c  desktop.h  dir-util.c  dir-util.h  document-private.h  document-undo.c  document.c  document.h  draw-context.c  draw-context.h  dropper-context.c  dropper-context.h  dyna-draw-context.c  dyna-draw-context.h  ellipse-context.c  ellipse-context.h  enums.h  event-broker.c  event-broker.h  event-context.c  event-context.h  (+184 more)
src/bonobo/: Makefile.am  canvas-translator.c  embeddable-desktop.c  embeddable-desktop.h  embeddable-document.c  embeddable-document.h  embeddable-drawing.c  embeddable-drawing.h  svg-doc-factory.c
src/dialogs/: Makefile.am  align.c  align.h  desktop-properties.c  desktop-properties.h  display-settings.c  display-settings.h  document-properties.c  document-properties.h  document-tree.c  document-tree.h  export.c  fill-style.c  fill-style.h  gradient-selector.c  gradient-selector.h  gradient-vector.c  gradient-vector.h  item-properties.c  item-properties.h  makefile.msc  node-edit.c  node-edit.h  object-attributes.c  object-attributes.h  object-fill.c  object-fill.h  object-properties.c  object-properties.h  object-stroke.c  object-stroke.h  sp-attribute-widget.c  sp-attribute-widget.h  sp-widget.c  sp-widget.h  stroke-style.c  stroke-style.h  text-edit.c  text-edit.h  tool-attributes.c  (+7 more)
src/display/: Makefile.am  canvas-arena.c  canvas-arena.h  canvas-bgroup.c  canvas-bgroup.h  canvas-image.c  canvas-image.h  canvas-shape.c  canvas-shape.h  cpath-component.c  cpath-component.h  fill.c  fill.h  makefile.msc  nr-aa-canvas.c  nr-arena-forward.h  nr-arena-glyphs.c  nr-arena-glyphs.h  nr-arena-group.c  nr-arena-group.h  nr-arena-image.c  nr-arena-image.h  nr-arena-item.c  nr-arena-item.h  nr-arena-shape.c  nr-arena-shape.h  nr-arena.c  nr-arena.h  nr-canvas-group.c  nr-canvas-group.h  nr-canvas-item.c  nr-canvas-item.h  nr-canvas.c  nr-canvas.h  nr-object.c  nr-object.h  nr-primitives.c  nr-primitives.h  nr-svp-render.c  nr-svp-render.h  (+14 more)
src/helper/: Makefile.am  action.c  action.h  art-rgba-rgba-affine.c  art-rgba-rgba-affine.h  art-rgba-svp.c  art-utils.c  art-utils.h  bezier-utils.c  bezier-utils.h  canvas-bpath.c  canvas-bpath.h  canvas-grid.c  canvas-grid.h  canvas-helper.h  curve.c  curve.h  gnome-canvas-acetate.c  gnome-canvas-acetate.h  gnome-utils.c  gt1-misc.h  gt1-namecontext.c  gt1-namecontext.h  gt1-parset1.c  gt1-parset1.h  gt1-region.c  gt1.h  guideline.c  guideline.h  helper-forward.h  kde.cpp  kde.h  makefile.msc  marshaller.c  nr-buffers.c  nr-buffers.h  nr-gradient-gpl.c  nr-gradient.c  nr-gradient.h  nr-plain-stuff-gdk.c  (+27 more)
src/libarikkei/: .cvsignore  Makefile.am  arikkei-dict.c  arikkei-dict.h  arikkei-iolib.c  arikkei-iolib.h  arikkei-strlib.c  arikkei-strlib.h  arikkei-token.c  libarikkei.def  makefile.msc
src/libnr/: .cvsignore  Makefile.am  README  gen_nr_config.c  have_mmx.S  libnr.def  makefile.msc  nr-blit.c  nr-blit.h  nr-compose-transform.c  nr-compose-transform.h  nr-compose.c  nr-compose.h  nr-forward.h  nr-gradient.c  nr-gradient.h  nr-macros.h  nr-matrix.c  nr-matrix.h  nr-object.c  nr-object.h  nr-path.c  nr-path.h  nr-pathops.c  nr-pathops.h  nr-pixblock-line.c  nr-pixblock-line.h  nr-pixblock-pattern.c  nr-pixblock-pattern.h  nr-pixblock-pixel.c  nr-pixblock-pixel.h  nr-pixblock.c  nr-pixblock.h  nr-pixops.h  nr-rect.c  nr-rect.h  nr-render.h  nr-stroke.c  nr-stroke.h  nr-svp-private.h  (+16 more)
src/libnrtype/: Makefile.am  codepages.h  libnrtype.def  makefile.msc  nr-font.c  nr-font.h  nr-glyphs.c  nr-glyphs.h  nr-rasterfont.c  nr-rasterfont.h  nr-type-directory.c  nr-type-directory.h  nr-type-ft2.c  nr-type-ft2.h  nr-type-gnome.c  nr-type-gnome.h  nr-type-primitives.c  nr-type-primitives.h  nr-type-w32.c  nr-type-w32.h  nr-type-xft.c  nr-type-xft.h  nr-typeface.c  nr-typeface.h
src/modules/: Makefile.am  gnome.c  gnome.h  kde.cpp  kde.h  makefile.msc  plain-pdf.c  plain-pdf.h  plain-ps.c  plain-ps.h  plain.c  plain.h  ps.c  ps.h  sp-module-doc.c  sp-module-doc.h  sp-module-exec-ext.c  sp-module-exec-ext.h  sp-module-exec.c  sp-module-exec.h  sp-module-sys.c  sp-module-sys.h  sp-module.c  sp-module.h  win32.c  win32.h
src/pixmaps/: cursor-select.xpm  cursor-zoom.xpm  handles.xpm
src/svg/: Makefile.am  gnome-canvas-bpath-util.c  gnome-canvas-bpath-util.h  makefile.msc  sp-svg.def  svg-affine.c  svg-color.c  svg-color.h  svg-fill.c  svg-font.c  svg-length.c  svg-path.c  svg-stroke.c  svg-types.h  svg.h
src/widgets/: .cvsignore  Makefile.am  button.c  button.h  cell-renderer-image.c  cell-renderer-image.h  dash-selector.c  dash-selector.h  font-selector.c  font-selector.h  gradient-image.c  gradient-image.h  gradient-position.c  gradient-position.h  gradient-selector.c  gradient-selector.h  gradient-vector.c  (+56 more)
(+85 files in other folders)
