#
# Sodipodi GnomeCanvas objects
# Author: Lauris Kaplinski <lauris@ariman.ee>
#
# Here are major objects, used for displaying things
#

INCLUDES = \
	-I.. \
	$(SODIPODI_CFLAGS)

noinst_LIBRARIES = libspdisplay.a

libspdisplay_a_SOURCES = \
	nr-arena-forward.h \
	nr-arena.c nr-arena.h \
	nr-arena-item.c nr-arena-item.h \
	nr-arena-group.c nr-arena-group.h \
	nr-arena-image.c nr-arena-image.h \
	nr-arena-shape.c nr-arena-shape.h \
	nr-arena-glyphs.c nr-arena-glyphs.h \
	canvas-arena.c canvas-arena.h \
	cpath-component.c cpath-component.h \
	path-archetype.c path-archetype.h

