#
# Miscellaneous unsystematized and temporary helper utilities
#
# libspchelp - canvas utilities, specific canvas items, libart add-ons
#

INCLUDES = \
	-I$(includedir) \
	-I$(GNOME_INCLUDEDIR)

noinst_LIBRARIES = libspchelp.a

libspchelp_a_SOURCES = \
	canvas-helper.h \
	art-utils.c art-utils.h \
	art-rgba-svp.c art-rgba-svp.h \
	art_rgb_affine_private.h \
	art-rgba-rgba-affine.c art-rgba-rgba-affine.h \
	sp-canvas-util.c sp-canvas-util.h \
	curve.c curve.h \
	gnome-canvas-acetate.c gnome-canvas-acetate.h \
	sodipodi-ctrl.c sodipodi-ctrl.h \
	sodipodi-ctrlrect.c sodipodi-ctrlrect.h \
	sp-ctrlline.c sp-ctrlline.h \
	sp-guide.c sp-guide.h \
	canvas-grid.c canvas-grid.h \
	png-write.c png-write.h \
	unit-menu.c unit-menu.h \
	nr-plain-stuff.c nr-plain-stuff.h \
	nr-plain-stuff-gdk.c nr-plain-stuff-gdk.h \
	bezier-utils.c bezier-utils.h

#	art_rgba.c art_rgba.h \
#	art_render.c art_render.h \
#	art_render_gradient.c art_render_gradient.h \
#	art_render_mask.c art_render_mask.h \
#	art_render_svp.c art_render_svp.h \
