#
# Miscellaneous unsystematized and temporary helper utilities
#
# libspchelp - canvas utilities, specific canvas items, libart add-ons
#

noinst_LIBRARIES = libspchelp.a

CPPFLAGS = \
	$(cppflags)

CFLAGS = \
	$(cflags) \
	$(SODIPODI_CFLAGS)

INCLUDES = \
	-I..

libspchelp_a_SOURCES = \
	helper-forward.h \
	sp-canvas.c sp-canvas.h \
	art-utils.c art-utils.h \
	sp-canvas-util.c sp-canvas-util.h \
	curve.c curve.h \
	gnome-canvas-acetate.c gnome-canvas-acetate.h \
	sodipodi-ctrl.c sodipodi-ctrl.h \
	sodipodi-ctrlrect.c sodipodi-ctrlrect.h \
	sp-ctrlline.c sp-ctrlline.h \
	sp-guide.c sp-guide.h \
	canvas-grid.c canvas-grid.h \
	canvas-bpath.c canvas-bpath.h \
	png-write.c png-write.h \
	nr-buffers.c nr-buffers.h \
	nr-plain-stuff.c nr-plain-stuff.h \
	nr-plain-stuff-gdk.c nr-plain-stuff-gdk.h \
	bezier-utils.c bezier-utils.h \
	units.c units.h \
	unit-menu.c unit-menu.h

#	pathops.c pathops.h

