
noinst_LIBRARIES = libnr.a

INCLUDES = \
	-I.. \
	$(SODIPODI_CFLAGS)

libnr_a_SOURCES = \
	nr-types.h \
	nr-forward.h \
	nr-macros.h \
	nr-values.c nr-values.h \
	nr-matrix.c nr-matrix.h \
	nr-rect.c nr-rect.h \
	nr-pixops.h \
	nr-compose.c nr-compose.h \
	nr-compose-transform.c nr-compose-transform.h \
	nr-pixblock.c nr-pixblock.h \
	nr-pixblock-pixel.c nr-pixblock-pixel.h \
	nr-pixblock-line.c nr-pixblock-line.h \
	nr-pixblock-pattern.c nr-pixblock-pattern.h \
	nr-blit.c nr-blit.h \
	nr-render.h \
	nr-gradient.c nr-gradient.h \
	nr-path.h
