noinst_LIBRARIES = libnrtype.a

INCLUDES = \
	-I.. \
	$(cflags) \
	$(FREETYPE_CFLAGS) \
	$(SODIPODI_CFLAGS) \
	$(SODIPODI_GNOME_PRINT_CFLAGS)

libnrtype_a_SOURCES = \
	nr-type-primitives.c nr-type-primitives.h \
	nr-typeface.c nr-typeface.h \
	nr-font.c nr-font.h \
	nr-rasterfont.c nr-rasterfont.h \
	nr-type-directory.c nr-type-directory.h \
	nr-type-ft2.c nr-type-ft2.h \
	nr-type-gnome.c nr-type-gnome.h

